--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  build:
+  app:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,11 +33,8 @@ jobs:
       - name: Run database migrations
         run: docker-compose run --rm -u root app php artisan migrate
 
-      - name: Run module migrations
-        run: docker-compose run --rm -u root app php artisan module:migrate-refresh
-
       - name: Run seeder
-        run: docker-compose run --rm -u root app php artisan module:seed
+        run: docker-compose run --rm -u root app php artisan db:seed
 
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
