--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,14 +22,18 @@ jobs:
       - name: Set up Docker Compose
         run: docker-compose up -d
 
+      - name: Install dependencies
+        run: |
+          docker-compose run --rm -u swoole app composer install
+
       - name: Run database migrations
-        run: docker-compose run --rm  app php artisan migrate
+        run: docker-compose run --rm -u swoole app php artisan migrate
 
       - name: Run seeder
-        run: docker-compose run --rm  app php artisan db:seed
+        run: docker-compose run --rm -u swoole app php artisan db:seed
 
       - name: Run tests
-        run: docker-compose run --rm  app vendor/bin/phpunit
+        run: docker-compose run --rm -u swoole app vendor/bin/phpunit
 
       - name: Stop Docker Compose
         run: docker-compose down
