--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,10 +22,10 @@ jobs:
         run: docker-compose up -d
 
       - name: Run database migrations
-        run: docker-compose run --rm -u root app php artisan migrate
+        run: docker-compose run --rm -u root app php artisan migrate --force
 
       - name: Run seeder
-        run: docker-compose run --rm -u root app php artisan db:seed
+        run: docker-compose run --rm -u root app php artisan db:seed --force
 
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
