--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+
+      - name: Remove existing network
+        run: docker network rm ramazan
 
       - name: Create Docker network
         run: docker network create ramazan
@@ -22,10 +25,10 @@ jobs:
         run: docker-compose up -d
 
       - name: Run database migrations
-        run: docker-compose run --rm -u root app php artisan migrate --force
+        run: docker-compose run --rm -u root app php artisan migrate
 
       - name: Run seeder
-        run: docker-compose run --rm -u root app php artisan db:seed --force
+        run: docker-compose run --rm -u root app php artisan db:seed
 
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
