--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,3 +44,7 @@ services:
             - PMA_ARBITRARY=1
         networks:
             - ramazan
+
+networks:
+    ramazan:
+        driver: bridge
