--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,8 @@ jobs:
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
 
+      - name: Docker Compose logs
+        run: docker-compose logs db
+
       - name: Stop Docker Compose
         run: docker-compose down
