docker log added

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,16 +24,15 @@ services:
             - ramazan
 
     db:
-        image: mariadb:10.6
+        image: mysql:8.0
         restart: always
+        ports:
+            - 3306:3306
         environment:
-            MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: tohfa-e-ramazan
             MYSQL_USER: root
             MYSQL_PASSWORD: password
-        command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-        networks:
-            - ramazan
+            MYSQL_ROOT_PASSWORD: password
 
     phpmyadmin:
         image: phpmyadmin
