--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,17 @@ jobs:
       - name: Set up Docker Compose
         run: docker-compose up -d
 
-      # - name: Run database migrations
-      #   run: docker-compose run --rm -u root app php artisan migrate --force
+      - name: check mysql connection
+        run: docker-compose exec db mysqladmin --user=root --password=password --host "
 
-      # - name: Run seeder
-      #   run: docker-compose run --rm -u root app php artisan db:seed --force
+      - name: Wait for MySQL to start
+        run: docker-compose exec db mysqladmin --user=root --password=password --host "
+
+      - name: Run migrations
+        run: docker-compose run --rm -u root app php artisan migrate
+
+      - name: Run seeder
+        run: docker-compose run --rm -u root app php artisan db:seed
 
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
