--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,9 @@ jobs:
 
       - name: Run migrations
         env:
+          DB_CONNECTION: mysql
           DB_HOST: db
+          DB_PORT: 3306
           DB_DATABASE: tohfa-e-ramazan
           DB_USERNAME: root
           DB_PASSWORD: password
