--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,18 +27,18 @@ jobs:
       - name: Check MySQL connection
         run: docker-compose exec -t db mysql --user=swoole --password=password --host=db --execute="SELECT 1;"
 
-      - name: Run migrations
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: db
-          DB_PORT: 3306
-          DB_DATABASE: tohfa-e-ramazan
-          DB_USERNAME: swoole
-          DB_PASSWORD: password
-        run: docker-compose run --rm -u root app php artisan migrate --force
+      # - name: Run migrations
+      #   env:
+      #     DB_CONNECTION: mysql
+      #     DB_HOST: db
+      #     DB_PORT: 3306
+      #     DB_DATABASE: tohfa-e-ramazan
+      #     DB_USERNAME: swoole
+      #     DB_PASSWORD: password
+      #   run: docker-compose run --rm -u root app php artisan migrate --force
 
-      - name: Run seeder
-        run: docker-compose run --rm -u root app php artisan db:seed --force
+      # - name: Run seeder
+      #   run: docker-compose run --rm -u root app php artisan db:seed --force
 
       - name: Run tests
         run: docker-compose run --rm -u root app vendor/bin/phpunit
