--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
             - ./storage:/home/swoole/storage
             - ./app:/home/swoole/app
         ports:
-            - 8886:80
+            - 8888:80
         environment:
             CHOKIDAR_USEPOLLING: 'true'
         user: "swoole:swoole"
@@ -24,7 +24,7 @@ services:
             - ramazan
 
     db:
-        image: mariadb:10.6
+        image: mysql:8.0
         restart: always
         ports:
             - "3306:3306"
