--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,11 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        
+        "files":[
+            "app/Helpers/helpers.php"
+        ]
     },
     "scripts": {},
     "extra": {
