--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,17 +24,16 @@ services:
             - ramazan
 
     db:
-        image: mysql:8.0
+        image: mariadb:10.6
         restart: always
         ports:
             - "3306:3306"
         environment:
             MYSQL_DATABASE: tohfa-e-ramazan
-            MYSQL_USER: swoole
+            MYSQL_USER: root
             MYSQL_PASSWORD: password
             MYSQL_ROOT_PASSWORD: password
-        volumes:
-            - ./mysql:/var/lib/mysql
+
         networks:
             - ramazan
 
